[package]
name = "lcpg"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
acap = "0.4.0"
fast_hilbert = "2.0.1"
hilbert = "0.1.2"
image = "0.25.6"
imageproc = "0.25.0"
libmath = "0.2.1"
num-complex = "0.4.6"
palette = "0.7.6"
round = "0.1.2"
rusttype = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
text_on_image = "=0.1.0"
